# remake

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  index.html  main.py  pyproject.toml  render.yaml  requirements.txt  server.py  stillwater.js  terminal.css
.github/workflows/: pattern_integrity.yml
WEB/: index.html  stillwater.js  terminal.css
docs/: README.md
docs/ambient/: acoustic-persistence-addendum-01.md  acoustic-persistence-addendum-13.md  acoustic-persistence-addendum-25.md  acoustic-persistence-addendum-37.md  archive-dust-tolerance-guide-07.md  archive-dust-tolerance-guide-19.md  archive-dust-tolerance-guide-31.md  archive-dust-tolerance-guide-43.md  basement-weather-almanac-18.md  basement-weather-almanac-30.md  basement-weather-almanac-42.md  cupboard-knocking-faq-09.md  cupboard-knocking-faq-21.md  door-without-room-register-05.md  door-without-room-register-17.md  door-without-room-register-29.md  door-without-room-register-41.md  negative-floor-etiquette-10.md  negative-floor-etiquette-22.md  negative-floor-etiquette-34.md  reflection-handling-memo-04.md  reflection-handling-memo-16.md  reflection-handling-memo-40.md  soft-alarm-escalation-ladder-08.md  unlit-corridor-survey-03.md  (+14 more)
stillwater/: __init__.py  auth.py  codicology.py  codicology_call.py  comshell_extra.py  cymatics.py  debrief.py  discordian.py  document_browser.py  egress.py  forms.py  handbook.py  hex_codec.py  hydrology.py  nodes.py  pattern_integrity.py  senion_verify.py
tests/: test_ambient_placeholders.py  test_discordian.py  test_hex_codec.py  test_pattern_integrity.py
(+10898 files in other folders)
